# gemma-harness

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
gemma_harness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
harness/: cli.py  context_manager.py  llm_client.py  orchestrator.py  prompt.py  session.py  ui.py
harness/tools/: __init__.py  base.py  file_ops.py  terminal.py
tests/: test_context.py  test_new_tools.py  test_tools.py  test_upgrades.py
