[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemma-harness"
version = "0.1.0"
description = "Lightweight VRAM-optimized autonomous AI agent harness for local Ollama models"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
tokenizer = ["transformers>=4.38.0"]
dev = ["pytest>=9.0.3"]

[project.scripts]
gemma-harness = "harness.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
